# aisweb-cli

./: .python-version  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh
aisweb_cli/: main.py
aisweb_cli/domain/result/: result.py  result_unreachable_exception.py
aisweb_cli/infrastructure/: cache.py  fake_cache.py  get_charter_data.py
aisweb_cli/use_cases/: get_charter_data.py
